First attempt at running enumeration algorithm in parallel.